- WebDriver to AppiumDriver, SwipeableDriver to AndroidDriver, WebElement to MobileElement

--- a/pom.xml
+++ b/pom.xml
@@ -48,14 +48,9 @@
             <version>6.9.9</version>
         </dependency>
         <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-java</artifactId>
-            <version>2.53.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-server</artifactId>
-            <version>2.53.1</version>
+            <groupId>io.appium</groupId>
+            <artifactId>java-client</artifactId>
+            <version>4.1.2</version>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
